k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: order-platform
  labels:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/component: messaging
    app.kubernetes.io/part-of: order-platform
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 9092
      targetPort: kafka
      protocol: TCP
      name: kafka
    - port: 9093
      targetPort: kafka-internal
      protocol: TCP
      name: kafka-internal
  selector:
    app.kubernetes.io/name: kafka
